--- a/templates/app1/ECS.html
+++ b/templates/app1/ECS.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>云服务器</title>
     <!-- 若您需要使用Kendo UI Professional，请联系版权人获得合法的授权或许可。 -->
     <!-- Bootstrap css -->
     <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +45,47 @@
                     <div class="king-header-list" style="float:right;" >
                         <ul>
                             <li style="font-size: 20px;"> 控制台&nbsp;</li>
-                            <li style="font-size: 20px;"> 注册 &nbsp;</li>
-                            <li style="font-size: 20px;"> 登录 </li>
+                            <div class="king-header-list list1" style="font-size: 20px">
+                            <ul>
+                                <li>
+                                    <a href="javascript:void(0);" class="f14">
+                                        <span style="font-size: 20px;">某某托管方用户</span>
+                                    </a>
+                                    <ul class="king-submenu">
+                                        <li>
+                                            <a href="javascript:void(0);">
+                                                <span style="font-size: 20px;">账号信息</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);">
+                                                <span style="font-size: 20px;">配额中心</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);">
+                                                <span style="font-size: 20px;">未读消息</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);">
+                                                <span style="font-size: 20px;">我的工单</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:void(0);">
+                                                <span style="font-size: 20px;">退出</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+
+                        </div>
+
                         </ul>
+
+
                     </div>
                         <div class="king-header-list list1" style="float: left">
                             <ul>
@@ -60,6 +98,7 @@
                                 <li>
                                     <a href="javascript:void(0);" class="f14">
                                         <span style="font-size: 20px">云产品</span>
+
                                     </a>
                                     <ul class="king-submenu">
                                         <div class="king-page-box">
@@ -77,7 +116,7 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td><a href="/ECS/">云服务器</a></td>
+                                                        <td>云服务器</td>
                                                         <td>云数据库Mysql</td>
                                                         <td>负载均衡</td>
                                                         <td>Ddos防护</td>
@@ -278,16 +317,21 @@
 
          <div class="king-layout2-main mt15" style="width:960px;">
                 <br><br><br>
+
+                <br><br><br>
                  <div style="border:1px solid #000000;">
-                     <h1 style=" text-align: center;">平台简介</h1><br><br><br>
+                     <h1 style=" text-align: center;">实例类型</h1><br><br><br>
                  </div>
                 <br><br><br>
                  <div style="border:1px solid #000000;">
-                     <h1 style=" text-align: center;">产品介绍</h1><br><br><br>
+                     <h1 style=" text-align: center;">功能说明</h1><br><br><br>
                  </div>
-                <br><br><br>
-                 <div style="border:1px solid #000000;">
-                     <h1 style=" text-align: center;">解决方案介绍</h1><br><br><br>
+             <br><br><br><br><br><br><br><br><br>
+                <div >
+                     <button style="text-align: center; font-size: 20px">
+                         <a href="/ECSapply/">立即申请</a>
+                     </button>&nbsp;&nbsp;
+                     <button style="text-align: center; font-size: 20px" >管理控制台</button>
                  </div>
 
                 <div class="king-layout1-content" >
